--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "12.3.1",
     "next-auth": "^4.12.3",
     "next-pwa": "^5.6.0",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
