--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-auth": "^4.12.3",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
+    "peerjs": "^1.4.7",
     "rc-slider": "^10.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
