added schema settings

--- a/.env-example
+++ b/.env-example
@@ -16,3 +16,8 @@ NEXTAUTH_URL=http://localhost:3000
 # Next Auth Discord Provider
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
+
+# PeerJS ServerSettings
+NEXT_PUBLIC_PEERJS_HOST=
+NEXT_PUBLIC_PEERJS_PORT=
+PEERJS_PATH=
