--- a/.env-example
+++ b/.env-example
@@ -17,7 +17,7 @@ NEXTAUTH_URL=http://localhost:3000
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 
-# PeerJS ServerSettings
+# PeerJS Server Settings
 NEXT_PUBLIC_PEERJS_HOST=
 NEXT_PUBLIC_PEERJS_PORT=
-PEERJS_PATH=
+NEXT_PUBLIC_PEERJS_PATH=
