--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@trpc/next": "10.0.0-proxy-beta.17",
     "@trpc/react": "10.0.0-proxy-beta.17",
     "@trpc/server": "10.0.0-proxy-beta.17",
-    "buttplug": "1.0.14",
+    "buttplug": "^3.0.0",
     "next": "12.3.1",
     "next-auth": "^4.12.3",
     "next-pwa": "^5.6.0",
